# finaltest

./: pyproject.toml
backend/: db.sqlite3
backend/config/: settings.py  urls.py
backend/tradeInfo/: admin.py  apps.py  models.py  serializers.py  views.py
backend/tradeInfo/migrations/: 0001_initial.py  0002_tradeinfo_fdata.py  0003_remove_tradeinfo_fdata.py  0004_remove_tradeinfo_id_alter_tradeinfo_trade_id.py
backend/uploads/: forms.py  models.py  serializers.py  views.py
backend/uploads/migrations/: 0001_initial.py
frontend/: package-lock.json  package.json
frontend/src/components/: ConfirmRemovalModal.js  Home.js  NewTradeInfoForm.js  NewTradeInfoModal.js  PdfControl.js  TradeInfoList.js
frontend/src/constants/: index.js
frontend/src/uploads/: Labs.js
frontend/tradeinfo/: package-lock.json  package.json
frontend/tradeinfo/src/components/: Header.js  Home.js  NewTradeInfoForm.js  NewTradeInfoModal.js  TradeInfoList.js
frontend/tradeinfo/src/constants/: index.js
